--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 		<!--
 			作者：1028997332@qq.com
 			时间：
@@ -21,7 +21,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>		
+		<title></title>	
+		<link rel="shortcut icon" href="img/jd.ico"/>	
 		<link rel="stylesheet" type="text/css" href="css/base.css"/>
 		<link rel="stylesheet" type="text/css" href="css/header.css"/>
 		<link rel="stylesheet" type="text/css" href="css/logo.css"/>
